[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acestep-api"
version = "1.0.0"
description = "FastAPI service for ACEStep audio generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ACEStep Team"},
]
keywords = ["fastapi", "audio", "generation", "ai", "modal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "datasets==3.4.1",
    "diffusers>=0.33.0",
    "librosa==0.11.0",
    "loguru==0.7.3",
    "matplotlib==3.10.1",
    "numpy",
    "pypinyin==0.53.0",
    "pytorch_lightning==2.5.1",
    "soundfile==0.13.1",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers==4.50.0",
    "py3langid==0.3.0",
    "hangul-romanize==0.1.0",
    "num2words==0.5.14",
    "spacy==3.8.4",
    "accelerate==1.6.0",
    "cutlet",
    "fugashi[unidic-lite]",
    "click",
    "peft",
    "tensorboard",
    "tensorboardX",
    "modal",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/ace-step/ACE-Step"
Repository = "https://github.com/ace-step/ACE-Step.git"
Issues = "https://github.com/ace-step/ACE-Step/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "acestep*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

